# qt-creator-8.0.2

./: .gitignore  .tag  CMakeLists.txt  copy_qt.py
cmake/: QtCreatorAPI.cmake  QtCreatorAPIInternal.cmake
share/: CMakeLists.txt
share/qtcreator/: CMakeLists.txt
src/app/: CMakeLists.txt  app_version.h.cmakein  app_version.h.in  main.cpp  main_mac.mm
src/libs/: CMakeLists.txt
src/libs/aggregation/: Aggregate.md  CMakeLists.txt  aggregate.cpp  aggregate.h  aggregation_global.h
src/libs/extensionsystem/: CMakeLists.txt  extensionsystem_global.h  invoker.cpp  invoker.h  iplugin.cpp  iplugin.h  optionsparser.cpp  plugindetailsview.cpp  plugindetailsview.h  pluginerroroverview.h  pluginerrorview.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h  pluginview.cpp  pluginview.h
src/libs/qlitehtml/: .tag
src/libs/utils/: CMakeLists.txt  QtConcurrentTools  algorithm.h  ansiescapecodehandler.cpp  ansiescapecodehandler.h  appmainwindow.cpp  appmainwindow.h  archive.cpp  archive.h  aspects.cpp  aspects.h  basetreeview.cpp  basetreeview.h  benchmarker.h  buildablehelperlibrary.cpp  buildablehelperlibrary.h  camelcasecursor.cpp  camelcasecursor.h  categorysortfiltermodel.h  changeset.cpp  changeset.h  checkablemessagebox.cpp  checkablemessagebox.h  classnamevalidatinglineedit.cpp  classnamevalidatinglineedit.h  codegeneration.cpp  codegeneration.h  commandline.cpp  commandline.h  completinglineedit.cpp  completinglineedit.h  completingtextedit.cpp  completingtextedit.h  cpplanguage_details.h  crumblepath.cpp  crumblepath.h  delegates.cpp  delegates.h  detailsbutton.cpp  detailsbutton.h  (+268 more)
src/plugins/: CMakeLists.txt
src/plugins/coreplugin/: CMakeLists.txt  basefilewizard.cpp  basefilewizard.h  basefilewizardfactory.cpp  basefilewizardfactory.h  core_global.h  coreconstants.h  (+138 more)
src/shared/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+222 files in other folders)
